# platform-integration-testing

./: .gitignore  Makefile  README.md  pyproject.toml
config/_templates/: creds.json
src/platform-integration-testing/orcus/: test_admin_config.py  test_admin_dataset_internal.py  test_admin_docs.py  test_admin_filesets.py  test_admin_flowenvironments.py  test_admin_flowgroups.py  test_admin_jolt.py  test_admin_metadata.py  test_admin_notices.py  test_dataset_groups.py  test_favorites.py  test_login.py  test_notices.py  test_user_endpoints.py
