[tool.poetry]
name = "platform-integration-testing"
version = "0.1.0"
description = "Torch.ai platform integration testing tool."
readme = "README.md"

packages = [
    { include = "platform-integration-testing", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]